Closed Bug 778091 Opened 12 years ago Closed 12 years ago

Low resolution version of flash displayed on all nvidia devices

Categories

(Firefox for Android Graveyard :: Plugins, defect)

ARM
Android
defect
Not set
major

Tracking

(firefox15 affected, firefox16 verified, firefox17 verified, firefox18 verified, fennec18+)

VERIFIED FIXED
Firefox 18
Tracking Status
firefox15 --- affected
firefox16 --- verified
firefox17 --- verified
firefox18 --- verified
fennec 18+ ---

People

(Reporter: csuciu, Assigned: snorp)

References

()

Details

(Keywords: regression)

Attachments

(2 files, 2 obsolete files)

Attached image screenshot
Fennec 17.0a1 (26-07-2012)
Asus EEE Transformer (Android 4.0.3)

Steps:
Go to http://www.mono-1.com/monoface/main.html or
      http://wechoosethemoon.com
       
Expected:
Site should load at a proper resolution

Actual:
Low resolution version of site is displayed

Note:
The issue is not reproducible on Samsung Galaxy Tab (3.1)
Assignee: nobody → snorp
Severity: normal → major
tracking-fennec: --- → ?
Keywords: regression
Can we get a regression-range, or has this always been the case?
Summary: Low resolution version of full flash site displayed on 4.x tablets → Low resolution version of full flash site displayed on all 4.x tablets
Summary: Low resolution version of full flash site displayed on all 4.x tablets → Low resolution version of flash displayed on all 4.x tablets
Snorp, thoughts?
The issue is reproducible on 13.0a1 (01/02). It seems to be an older issue. Should we continue to search?
Sorry for the comment above, the Firefox 13.0a1 version wasn't for tablet UI, in consequence, I'm removing the regressionwindow-wanted keyword.
Snorp, thoughts?
tracking-fennec: ? → 18+
I can verify issue still exists on Asus TF300T tablet, Android 4.1.1, Firefox 17.0a2 2012-09-11. Using https://wwws.betterment.com/App.html to reproduce.
It is still low res on the Asus TF101 using Android 4x.
Comment on attachment 661815 [details] [diff] [review]
Use medium precision for OpenGL ES shaders

Do we need mediump everywhere?  It can/is a perf hit in some cases -- causing the GPU to be able to process 2 fragments instead of 4 at a time (or 2 color components instead of 4)..
Attachment #661815 - Attachment is obsolete: true
Attachment #661815 - Flags: review?(vladimir)
(In reply to Vladimir Vukicevic [:vlad] [:vladv] from comment #13)
> Comment on attachment 661815 [details] [diff] [review]
> Use medium precision for OpenGL ES shaders
> 
> Do we need mediump everywhere?  It can/is a perf hit in some cases --
> causing the GPU to be able to process 2 fragments instead of 4 at a time (or
> 2 color components instead of 4)..

Setting the precision only on the relevant shader seems to have the same effect, so I've uploaded a new patch that only changes the single shader.
Comment on attachment 661831 [details] [diff] [review]
Use medium precision for SurfaceTexture shader

># HG changeset patch
># User James Willcox <jwillcox@mozilla.com>
># Date 1347900737 14400
># Node ID 704088ed61a615b972e3cd036920c09e6d06a064
># Parent  3f0587ce17740b77b37d52f687825a6fd76cc916
>Bug 778091 - Use medium precision for SurfaceTexture shader
>
>diff --git a/gfx/layers/opengl/LayerManagerOGLShaders.h b/gfx/layers/opengl/LayerManagerOGLShaders.h
>--- a/gfx/layers/opengl/LayerManagerOGLShaders.h
>+++ b/gfx/layers/opengl/LayerManagerOGLShaders.h
>@@ -241,20 +241,23 @@ precision lowp float;\n\
> \n\
> #ifndef NO_LAYER_OPACITY\n\
> uniform float uLayerOpacity;\n\
> #endif\n\
> #ifdef GL_ES // for tiling, texcoord can be greater than the lowfp range\n\
> varying mediump vec2 vTexCoord;\n\
> #else\n\
> varying vec2 vTexCoord;\n\
> #endif\n\
> \n\
>+#ifdef GL_ES\n\
>+precision mediump float;\n\
>+#endif\n\

The precision qualifier should go first in the file, and then you can get rid of the #ifdef GL_ES mediump bits like you did in the previous patches; but do it just for these shaders.
Attachment #661831 - Attachment is obsolete: true
Attachment #661831 - Flags: review?(vladimir)
Comment on attachment 661842 [details] [diff] [review]
Use medium precision for SurfaceTexture shader

Sure, looks good to me.
Attachment #661842 - Flags: review?(vladimir) → review+
Comment on attachment 661842 [details] [diff] [review]
Use medium precision for SurfaceTexture shader

[Approval Request Comment]
Fixes highly visible Flash bug, beta blocker. Low risk.
Attachment #661842 - Flags: approval-mozilla-beta?
Attachment #661842 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/fd9019f20ca4
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 18
Summary: Low resolution version of flash displayed on all 4.x tablets → Low resolution version of flash displayed on all nvidia devices
Comment on attachment 661842 [details] [diff] [review]
Use medium precision for SurfaceTexture shader

Low risk but let's get this in now so it can go out in Beta 4 which builds today to ensure we have time to backout before final builds if there was obvious fallout.
Attachment #661842 - Flags: approval-mozilla-beta?
Attachment #661842 - Flags: approval-mozilla-beta+
Attachment #661842 - Flags: approval-mozilla-aurora?
Attachment #661842 - Flags: approval-mozilla-aurora+
QA Note: Nicolae, please verify this on the next Beta build. I'll look at the TF201.
QA Contact: nicolae.cristian
(In reply to Aaron Train [:aaronmt] from comment #25)
> QA Note: Nicolae, please verify this on the next Beta build. I'll look at
> the TF201.

Sure, I will do.

There is a 5 stars video quality on the latest Nightly build. 

--
Firefox 18.0a1 (2012-09-20)
Device: Galaxy Tab 10.1
OS: Android 3.1
On Acer A200:

Firefox 17 - fixed
Firefox 16 - affected

Please try this to verify: http://www.zdf.de/ZDFmediathek/#/hauptnavigation/startseite

The whole side is flash.
(In reply to keyholder from comment #27)
> On Acer A200:
> 
> Firefox 17 - fixed
> Firefox 16 - affected
> 
> Please try this to verify:
> http://www.zdf.de/ZDFmediathek/#/hauptnavigation/startseite
> 
> The whole side is flash.

Yes, this will be fixed in this week's Beta build.
Indeed, this issue was fixed on the latest Beta build and Aurora either. Closing bug as verified fixed on:

Firefox 16.0b5 (2012-09-26)
Device: Galaxy Tab 10.1
OS: Android 3.1
Status: RESOLVED → VERIFIED
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: