Bug 778091 - Use medium precision for SurfaceTexture shader r=vlad a=lsblakk